syntax = "proto3";

package user;
option go_package = "github.com/GabrielMoody/MikroNet/user/internal/pb";

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string password = 6;
  string date_of_birth = 7;
  uint32 age = 8;
  string gender = 9;
  string role = 10;
}

message Empty{}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  string id = 1;
}

message Users {
  repeated User users = 1;
}

message GetByIDRequest {
  string id = 1;
}

message Review {
  string id = 1;
  string user_id = 2;
  string driver_id = 3;
  string comment = 4;
  uint32 star = 5;
}

message GetReviewsResponse {
  repeated Review reviews = 1;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
  rpc GetUsers (Empty) returns (Users){}
  rpc GetUserDetails (GetByIDRequest) returns (User){}
  rpc GetReviews (Empty) returns (GetReviewsResponse){}
  rpc GetReviewsByID (GetByIDRequest) returns (Review){}
}